# exercicios_est-gio01

./: .gitignore  AppTestList.cpp  AppTestList.h  CMakeLists.txt  Commands.cpp  Interface.cpp  User.h  exercicios_estágio01.sln  exercicios_estágio01.vcxproj  exercicios_estágio01.vcxproj.filters
.github/workflows/: cmake.yml
headers/: ClassList.h  Commands.h  Interface.h  Students.h
sources/: Commands.cpp  Interface.cpp  Students.cpp  main.cpp
